[package]
name = "todo-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
dialoguer = "0.11.0"
home = "0.5.9"
indicatif = "0.17.7"
store-hashmap = {path="../store-hashmap"}
todo-logic = {path="../todo-logic"}
